# agentfolio

./: .env.example  .gitignore  README.md  makefile  pyproject.toml  requirements.txt
mds/: deployment_overview.md  implementation.md  integration.md  overview.md
scripts/: run_agent1.sh  run_agent2.sh  run_agent3.sh  run_agent4.sh  run_agent5.sh  run_pulse.sh  run_scout.sh
scripts/launchd/: com.agentfolio.agent1.plist  com.agentfolio.agent2.plist  com.agentfolio.agent3.plist  com.agentfolio.agent4.plist  com.agentfolio.agent5.plist  com.agentfolio.pulse.plist  com.agentfolio.scout.plist
src/: chronicle.py  cli.py  compute.py  fetch_market_data.py  parse_ibkr.py  precompute.py
src/agents/: agent1.py  agent2.py  agent3.py  agent4.py  agent5.py  agent_pulse.py  base.py  news_filter.py  scout.py
src/prompts/: agent1.txt  agent2.txt  agent3.txt  agent4.txt  agent5.txt  news_filter.txt  pulse.txt  scout.txt
