[project]
name = "agentfolio"
version = "0.1.0"
description = ""
authors = [
    {name = "Romanos Chiliarchopoulos",email = "romanoshiliarhopoulos@gmail.com"}
]
readme = "README.md"
requires-python = ">=3.11,<3.14"
dependencies = [
    "yfinance (>=1.2.0,<2.0.0)",
    "feedparser (>=6.0.12,<7.0.0)",
    "requests (>=2.33.1,<3.0.0)",
    "pandas (>=3.0.2,<4.0.0)",
    "numpy (>=2.4.4,<3.0.0)",
    "python-dotenv (>=1.2.2,<2.0.0)",
    "rich (>=14.3.3,<15.0.0)",
    "click (>=8.3.1,<9.0.0)"
]


[project.scripts]
agentfolio = "cli:cli"

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
